corpus/cpp/pointer_reference/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:5:16: error: [incomplete_type] invalid use of incomplete type 'struct Node'
name: struct Node
use : return node->value;
need: full type definition
from: src/main.cpp:1:8 struct Node;
| src/main.cpp:5:16
|     return node->value;
|                ^
details: --formed-explain | raw: --formed-raw